--- a/BuildingAppsWithMvc4/Views/Home/About.cshtml
+++ b/BuildingAppsWithMvc4/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
-﻿@{
+﻿@model BuildingAppsWithMvc4.Models.AboutModel
+
+@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<hgroup>
+    <h1>@ViewBag.Title</h1>
+    <h2>@Model.Name</h2>
+    <h2>@Model.Location</h2>
+</hgroup>
 
-<p>Use this area to provide additional information.</p>
